# CHT_Radix

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  REPRODUCIBILITY.md  requirements.txt
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: sharegpt.trace.sha256
docs/: future_work.md  index.html
include/: hash_table.hpp  hash_utils.hpp  histogram.hpp  thread_pool.hpp  timing.hpp  workload.hpp
results/: experiments_canonical.csv  experiments_canonical.meta.json  radix_sweep_canonical.csv  radix_sweep_canonical.meta.json
scripts/: plot.py  run_hash_sweep.sh  run_radix_sweep.sh
src/bench/: histogram.cpp  main.cpp  thread_pool.cpp  workload.cpp
src/tables/: chaining_coarse.cpp  chaining_fine.cpp  cuckoo_optimistic.cpp  cuckoo_striped.cpp  hopscotch.cpp  radix_tree_coarse.cpp  radix_tree_fine.cpp  registry.cpp  stub.cpp
src/tests/: correctness_test.cpp
src/trace/: extract.py  trace_format.py  verify.py
